tests/samples/negative/generics/generic_fn_type_args_too_many.ax
module generic_fn_type_args_too_many;

fn id<T>(value: T) -> T {
    return value;
}

fn main() -> i32 {
    return id<i32, bool>(1);
}
